--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
+            <!-- Responsive hero image with srcset for optimization -->
+            <picture class="hero-image">
+                <source media="(min-width: 2048px)" srcset="assets/photos/inUse/home/hero-2560.webp">
+                <source media="(min-width: 1440px)" srcset="assets/photos/inUse/home/hero-1920.webp">
+                <source media="(min-width: 960px)" srcset="assets/photos/inUse/home/hero-1280.webp">
+                <img src="assets/photos/inUse/home/hero-720.webp" alt="SGP Yoga Studio" loading="eager">
+            </picture>
+            
+            <!-- Hero content positioned in upper-left -->
             <div class="hero-content">
                 <h1 data-i18n="home:hero.welcome">Welcome to SGP Yoga</h1>
                 <p data-i18n="home:hero.subtitle">Find your inner peace in the heart of Mexico City</p>
