added classes section to the homepage

--- a/index.html
+++ b/index.html
@@ -79,6 +79,33 @@
                 <p data-i18n="home:hero.subtitle">Find your inner peace in the heart of Mexico City</p>
             </div>
         </section>
+
+        <!-- Classes Section -->
+        <section class="classes-section">
+            <div class="container">
+                <div class="classes-content">
+                    <!-- Classes Text Content -->
+                    <div class="classes-text">
+                        <h2 data-i18n="home:classes.title">Yoga Classes</h2>
+                        <p data-i18n="home:classes.subtitle">Step into the flow following the guidance of our expert teachers. We offer a variety of yoga styles such as Vinyasa, Hatha, Kundalini and Aerial Yoga - so that everyone can find what they need. See you on the mat!</p>
+                        <a href="classes.html" class="btn btn-elegant">
+                            <span data-i18n="home:classes.exploreButton">Explore Classes</span>
+                            <i data-lucide="arrow-right"></i>
+                        </a>
+                    </div>
+                    
+                    <!-- Classes Image -->
+                    <div class="classes-image">
+                        <picture>
+                            <source media="(min-width: 1200px)" srcset="assets/photos/inUse/home/classes-1200.webp">
+                            <source media="(min-width: 800px)" srcset="assets/photos/inUse/home/classes-800.webp">
+                            <source media="(min-width: 600px)" srcset="assets/photos/inUse/home/classes-600.webp">
+                            <img src="assets/photos/inUse/home/classes-400.webp" alt="Yoga Classes" loading="lazy">
+                        </picture>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- JavaScript Files -->
