added quote section to the homepage

--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
                 </div>
             </div>
         </section>
+
+        <!-- Inspirational Quote Section -->
+        <section class="quote-section">
+            <div class="container">
+                <blockquote class="inspirational-quote" data-i18n="home:quote.text">
+                    "What you may become is inconsequential in comparison to what you already are."
+                </blockquote>
+            </div>
+        </section>
     </main>
 
     <!-- JavaScript Files -->
