added events section to homepage

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <!-- Classes Text Content -->
                     <div class="classes-text">
                         <h2 data-i18n="home:classes.title">Yoga Classes</h2>
-                        <p data-i18n="home:classes.subtitle">Step into the flow following the guidance of our expert teachers. We offer a variety of yoga styles such as Vinyasa, Hatha, Kundalini and Aerial Yoga - so that everyone can find what they need. See you on the mat!</p>
+                        <p data-i18n="home:classes.text">Step into the flow following the guidance of our expert teachers. We offer a variety of yoga styles such as Vinyasa, Hatha, Kundalini and Aerial Yoga - so that everyone can find what they need. See you on the mat!</p>
                         <a href="classes.html" class="btn btn-elegant">
                             <span data-i18n="home:classes.exploreButton">Explore Classes</span>
                             <i data-lucide="arrow-right"></i>
@@ -98,9 +98,8 @@
                     <div class="classes-image">
                         <picture>
                             <source media="(min-width: 1200px)" srcset="assets/photos/inUse/home/classes-1200.webp">
-                            <source media="(min-width: 800px)" srcset="assets/photos/inUse/home/classes-800.webp">
-                            <source media="(min-width: 600px)" srcset="assets/photos/inUse/home/classes-600.webp">
-                            <img src="assets/photos/inUse/home/classes-400.webp" alt="Yoga Classes" loading="lazy">
+                            <source media="(min-width: 800px)" srcset="assets/photos/inUse/home/classes-1080.webp">
+                            <img src="assets/photos/inUse/home/classes-720.webp" alt="Yoga Classes" loading="lazy">
                         </picture>
                     </div>
                 </div>
@@ -113,6 +112,32 @@
                 <blockquote class="inspirational-quote" data-i18n="home:quote.text">
                     "What you may become is inconsequential in comparison to what you already are."
                 </blockquote>
+            </div>
+        </section>
+
+        <!-- Events Section -->
+        <section class="events-section">
+            <div class="container">
+                <div class="events-content">
+                    <!-- Events Image -->
+                    <div class="events-image">
+                        <picture>
+                            <source media="(min-width: 1200px)" srcset="assets/photos/inUse/home/events-1200.webp">
+                            <source media="(min-width: 800px)" srcset="assets/photos/inUse/home/events-1080.webp">
+                            <img src="assets/photos/inUse/home/events-720.webp" alt="Yoga Events" loading="lazy">
+                        </picture>
+                    </div>
+                    
+                    <!-- Events Text Content -->
+                    <div class="events-text">
+                        <h2 data-i18n="home:events.title">Events</h2>
+                        <p data-i18n="home:events.text">Looking for something special? Have a look at our thematic workshops, retreats and teacher trainings!</p>
+                        <a href="events.html" class="btn btn-elegant">
+                            <span data-i18n="home:events.exploreButton">Explore Events</span>
+                            <i data-lucide="arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
