made cosmetic changes to the footer and the navbar

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <nav class="navbar">
         <!-- Left Section: Logo and Studio Name -->
         <div class="navbar-left">
-            <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="navbar-logo">
-            <span class="navbar-brand">SGP Yoga</span>
+            <a href="index.html" class="navbar-brand-link">
+                <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="navbar-logo">
+                <span class="navbar-brand">SGP Yoga</span>
+            </a>
         </div>
         
         <!-- Middle Section: Menu Items -->
@@ -353,7 +355,9 @@
                 <div class="footer-grid">
                     <!-- Logo and Mission Section -->
                     <div class="footer-column footer-logo-section">
-                        <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="footer-logo">
+                        <a href="index.html" class="footer-logo-link">
+                            <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="footer-logo">
+                        </a>
                         <h3 data-i18n="common:footer.mission.title">Our Mission</h3>
                         <p class="footer-mission-text" data-i18n="common:footer.mission.text">Guiding souls to discover their inner light through the transformative practice of yoga in the heart of Mexico City.</p>
                     </div>
@@ -370,38 +374,41 @@
                         </ul>
                     </div>
 
-                    <!-- Contact Section -->
-                    <div class="footer-column footer-contact">
-                        <h3 data-i18n="common:footer.contact.title">Contact Us</h3>
-                        <div class="footer-contact-item">
-                            <i data-lucide="mail"></i>
-                            <div>
-                                <span data-i18n="common:footer.contact.email">Email</span>:
-                                <a href="mailto:satgurprasaadyoga@gmail.com" data-i18n="common:footer.contact.emailValue">satgurprasaadyoga@gmail.com</a>
+                    <!-- Bottom Row: Contact and Social -->
+                    <div class="footer-bottom-row">
+                        <!-- Contact Section -->
+                        <div class="footer-column footer-contact">
+                            <h3 data-i18n="common:footer.contact.title">Contact Us</h3>
+                            <div class="footer-contact-item">
+                                <i data-lucide="mail"></i>
+                                <div>
+                                    <span data-i18n="common:footer.contact.email">Email</span>:
+                                    <a href="mailto:satgurprasaadyoga@gmail.com" data-i18n="common:footer.contact.emailValue">satgurprasaadyoga@gmail.com</a>
+                                </div>
+                            </div>
+                            <div class="footer-contact-item">
+                                <i data-lucide="phone"></i>
+                                <div>
+                                    <span data-i18n="common:footer.contact.phone">Phone</span>:
+                                    <a href="tel:+525539061305" data-i18n="common:footer.contact.phoneValue">+52 55 3906 1305</a>
+                                </div>
                             </div>
                         </div>
-                        <div class="footer-contact-item">
-                            <i data-lucide="phone"></i>
-                            <div>
-                                <span data-i18n="common:footer.contact.phone">Phone</span>:
-                                <a href="tel:+525539061305" data-i18n="common:footer.contact.phoneValue">+52 55 3906 1305</a>
-                            </div>
-                        </div>
-                    </div>
 
-                    <!-- Social Media Section -->
-                    <div class="footer-column footer-social">
-                        <h3 data-i18n="common:footer.social.title">Follow Us</h3>
-                        <div class="footer-social-links">
-                            <a href="#" class="footer-social-link" aria-label="Facebook" data-i18n-aria-label="common:footer.social.facebook">
-                                <i data-lucide="facebook"></i>
-                            </a>
-                            <a href="#" class="footer-social-link" aria-label="Instagram" data-i18n-aria-label="common:footer.social.instagram">
-                                <i data-lucide="instagram"></i>
-                            </a>
-                            <a href="#" class="footer-social-link" aria-label="YouTube" data-i18n-aria-label="common:footer.social.youtube">
-                                <i data-lucide="youtube"></i>
-                            </a>
+                        <!-- Social Media Section -->
+                        <div class="footer-column footer-social">
+                            <h3 data-i18n="common:footer.social.title">Follow Us</h3>
+                            <div class="footer-social-links">
+                                <a href="https://www.facebook.com/profile.php?id=100035570391956" class="footer-social-link" aria-label="Facebook" data-i18n-aria-label="common:footer.social.facebook">
+                                    <i data-lucide="facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/satgurprasaad_yoga/" class="footer-social-link" aria-label="Instagram" data-i18n-aria-label="common:footer.social.instagram">
+                                    <i data-lucide="instagram"></i>
+                                </a>
+                                <a href="https://www.youtube.com/@satgurprasaadyoga" class="footer-social-link" aria-label="YouTube" data-i18n-aria-label="common:footer.social.youtube">
+                                    <i data-lucide="youtube"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
