redesign classes and events sections

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="container">
                 <div class="classes-content">
                     <!-- Classes Text Content -->
-                    <div class="classes-text">
+                    <div class="classes-text" data-eyebrow="OUR CLASSES">
                         <h2 data-i18n="home:classes.title">Yoga Classes</h2>
                         <p data-i18n="home:classes.text">Step into the flow following the guidance of our expert teachers. We offer a variety of yoga styles such as Vinyasa, Hatha, Kundalini and Aerial Yoga - so that everyone can find what they need. See you on the mat!</p>
                         <a href="classes.html" class="btn btn-elegant">
@@ -131,7 +131,7 @@
                     </div>
                     
                     <!-- Events Text Content -->
-                    <div class="events-text">
+                    <div class="events-text" data-eyebrow="UPCOMING">
                         <h2 data-i18n="home:events.title">Events</h2>
                         <p data-i18n="home:events.text">Looking for something special? Have a look at our thematic workshops, retreats and teacher trainings!</p>
                         <a href="events.html" class="btn btn-elegant">
