adjust quote section styling

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <section class="quote-section">
             <div class="container">
                 <blockquote class="inspirational-quote" data-i18n="home:quote.text">
-                    "What you may become is inconsequential in comparison to what you already are."
+                    What you may become is inconsequential in comparison to what you already are.
                 </blockquote>
             </div>
         </section>
