create yoga style section design

--- a/about.html
+++ b/about.html
@@ -125,11 +125,10 @@
 
         <!-- Section 2: Yoga Styles -->
         <section id="styles" class="styles-section section-padding">
-            <div class="container">
-                <div class="styles-gallery-grid">
+            <div class="styles-gallery-grid">
                     <!-- Aerial Yoga Tile -->
                     <div class="style-tile" data-style="aerial">
-                        <img src="assets/photos/placeholder.jpg" alt="Aerial Yoga" class="style-tile-image">
+                        <img src="assets/photos/inUse/about/aerial-1200.webp" alt="Aerial Yoga" class="style-tile-image">
                         <div class="style-overlay">
                             <div class="style-content">
                                 <h3 class="style-name" data-i18n="about:styles.aerial.name">Aerial Yoga</h3>
@@ -140,7 +139,7 @@
 
                     <!-- Vinyasa Yoga Tile -->
                     <div class="style-tile" data-style="vinyasa">
-                        <img src="assets/photos/placeholder.jpg" alt="Vinyasa" class="style-tile-image">
+                        <img src="assets/photos/inUse/about/vinyasa-1200.webp" alt="Vinyasa" class="style-tile-image">
                         <div class="style-overlay">
                             <div class="style-content">
                                 <h3 class="style-name" data-i18n="about:styles.vinyasa.name">Vinyasa</h3>
@@ -151,7 +150,7 @@
 
                     <!-- Hatha Yoga Tile -->
                     <div class="style-tile" data-style="hatha">
-                        <img src="assets/photos/placeholder.jpg" alt="Hatha" class="style-tile-image">
+                        <img src="assets/photos/inUse/about/hatha-1200.webp" alt="Hatha" class="style-tile-image">
                         <div class="style-overlay">
                             <div class="style-content">
                                 <h3 class="style-name" data-i18n="about:styles.hatha.name">Hatha</h3>
@@ -162,7 +161,7 @@
 
                     <!-- Kundalini Yoga Tile -->
                     <div class="style-tile" data-style="kundalini">
-                        <img src="assets/photos/placeholder.jpg" alt="Kundalini" class="style-tile-image">
+                        <img src="assets/photos/inUse/about/kundalini-1200.webp" alt="Kundalini" class="style-tile-image">
                         <div class="style-overlay">
                             <div class="style-content">
                                 <h3 class="style-name" data-i18n="about:styles.kundalini.name">Kundalini</h3>
@@ -171,7 +170,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
 
         <!-- Section 3: Our Teachers -->
