tweak teacher's section design & replace placeholders with real content

--- a/about.html
+++ b/about.html
@@ -174,15 +174,17 @@
             <div class="container">
                 <h2 class="section-title" data-i18n="about:teachers.title">Meet Our Teachers</h2>
                 <p class="section-subtitle" data-i18n="about:teachers.subtitle">Experienced guides on your yoga journey</p>
-                
-                <div class="teachers-grid">
+            </div>
+            
+            <!-- Full-width scrolling grid outside container -->
+            <div class="teachers-grid">
                     <!-- Teacher 1 -->
                     <div class="teacher-card">
                         <div class="teacher-photo">
-                            <img src="assets/photos/inUse/teachers/teacher1.webp" alt="Teacher Name" loading="lazy">
+                            <img src="assets/photos/inUse/about/harjeet.webp" alt="Teacher Name" loading="lazy">
                         </div>
                         <div class="teacher-info">
-                            <h3 data-i18n="about:teachers.teacher1.name">Harjeet Singh</h3>
+                            <h3 data-i18n="about:teachers.teacher1.name">Harjeet</h3>
                             <span class="teacher-specialty" data-i18n="about:teachers.teacher1.specialty">Kundalini & Vinyasa</span>
                             <p data-i18n="about:teachers.teacher1.bio">With over 10 years of practice and study, Harjeet brings deep wisdom and compassionate guidance to every class. His teaching style emphasizes mindfulness and spiritual connection.</p>
                         </div>
@@ -191,10 +193,10 @@
                     <!-- Teacher 2 -->
                     <div class="teacher-card">
                         <div class="teacher-photo">
-                            <img src="assets/photos/inUse/teachers/teacher2.webp" alt="Teacher Name" loading="lazy">
+                            <img src="assets/photos/inUse/about/camila.webp" alt="Teacher Name" loading="lazy">
                         </div>
                         <div class="teacher-info">
-                            <h3 data-i18n="about:teachers.teacher2.name">María González</h3>
+                            <h3 data-i18n="about:teachers.teacher2.name">Camila</h3>
                             <span class="teacher-specialty" data-i18n="about:teachers.teacher2.specialty">Hatha & Aerial</span>
                             <p data-i18n="about:teachers.teacher2.bio">María's gentle approach and attention to alignment make her classes accessible to all levels. She specializes in helping students build confidence and strength.</p>
                         </div>
@@ -203,7 +205,7 @@
                     <!-- Teacher 3 -->
                     <div class="teacher-card">
                         <div class="teacher-photo">
-                            <img src="assets/photos/inUse/teachers/teacher3.webp" alt="Teacher Name" loading="lazy">
+                            <img src="assets/photos/inUse/about/dani.webp" alt="Teacher Name" loading="lazy">
                         </div>
                         <div class="teacher-info">
                             <h3 data-i18n="about:teachers.teacher3.name">Sofia Martínez</h3>
@@ -215,7 +217,7 @@
                     <!-- Teacher 4 -->
                     <div class="teacher-card">
                         <div class="teacher-photo">
-                            <img src="assets/photos/inUse/teachers/teacher4.webp" alt="Teacher Name" loading="lazy">
+                            <img src="assets/photos/inUse/about/aro.webp" alt="Teacher Name" loading="lazy">
                         </div>
                         <div class="teacher-info">
                             <h3 data-i18n="about:teachers.teacher4.name">Carlos Hernández</h3>
@@ -227,7 +229,7 @@
                     <!-- Teacher 5 -->
                     <div class="teacher-card">
                         <div class="teacher-photo">
-                            <img src="assets/photos/inUse/teachers/teacher5.webp" alt="Teacher Name" loading="lazy">
+                            <img src="assets/photos/inUse/about/itzel.webp" alt="Teacher Name" loading="lazy">
                         </div>
                         <div class="teacher-info">
                             <h3 data-i18n="about:teachers.teacher5.name">Ana López</h3>
@@ -235,7 +237,6 @@
                             <p data-i18n="about:teachers.teacher5.bio">Ana's playful spirit and expert guidance make aerial yoga accessible and fun. She helps students overcome fear and discover new possibilities.</p>
                         </div>
                     </div>
-                </div>
             </div>
         </section>
 
