replace placeholder google maps links with real data

--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
                                 <span data-i18n="about:spaces.space1.address">Calle Orizaba 123, Roma Norte, CDMX</span>
                             </div>
                             <p class="space-description" data-i18n="about:spaces.space1.description">Our main studio in the heart of Roma Norte offers a peaceful sanctuary for your practice. The space features high ceilings, bamboo floors, and abundant natural light.</p>
-                            <a href="#" class="btn-space" data-i18n="about:spaces.viewMap">View on Map</a>
+                            <a href="https://www.google.com/maps/place/Tres+Zapotes+128,+Letran+Valle,+Benito+Ju%C3%A1rez,+03650+Ciudad+de+M%C3%A9xico,+CDMX,+Meksyk/@19.373788,-99.1543038,17z/data=!3m1!4b1!4m6!3m5!1s0x85d1ffae03053455:0x67f0ddbbff3461f8!8m2!3d19.373788!4d-99.1517289!16s%2Fg%2F11c1f7209z?entry=ttu&g_ep=EgoyMDI1MTAxNC4wIKXMDSoASAFQAw%3D%3D" class="btn-space" target="_blank" rel="noopener noreferrer" data-i18n="about:spaces.viewMap">View on Map</a>
                         </div>
                     </div>
                 </div>
@@ -278,7 +278,7 @@
                                 <span data-i18n="about:spaces.space2.address">Avenida Amsterdam 89, Condesa, CDMX</span>
                             </div>
                             <p class="space-description" data-i18n="about:spaces.space2.description">Located in beautiful Condesa, this intimate space is perfect for small group classes and private sessions. Features include a garden view and eco-friendly materials.</p>
-                            <a href="#" class="btn-space" data-i18n="about:spaces.viewMap">View on Map</a>
+                            <a href="https://www.google.com/maps/place/Aguacate+3,+Santa+Catarina,+Coyoac%C3%A1n,+04010+Ciudad+de+M%C3%A9xico,+CDMX,+Meksyk/@19.3484531,-99.1713639,19.88z/data=!4m14!1m7!3m6!1s0x85d1ff30a5e96dcb:0xb738dc6e87fe52e4!2sCallej%C3%B3n+del+Aguacate!8m2!3d19.3486591!4d-99.170932!16s%2Fg%2F11g1lw16vp!3m5!1s0x85d1ffe62fbda1f3:0xfc86176f630b0f8!8m2!3d19.3484063!4d-99.1711183!16s%2Fg%2F11c0z29lmt?entry=ttu&g_ep=EgoyMDI1MTAxNC4wIKXMDSoASAFQAw%3D%3D" class="btn-space" target="_blank" rel="noopener noreferrer" data-i18n="about:spaces.viewMap">View on Map</a>
                         </div>
                     </div>
                 </div>
